--- a/class.css
+++ b/class.css
@@ -11,14 +11,14 @@
     margin: 80px 0;
 }
 
-.firstSection > div {
+.firstSection>div {
     width: 30%;
     height: fit-content;
 }
 
 
 .leftSection {
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 .rightSection img {
@@ -28,19 +28,60 @@
     border-radius: 100px;
     background-color: rgba(231, 231, 231, 0.621);
 }
+
 .purple {
     color: rgb(128, 0, 128);
 }
-.secondSection{
+
+.secondSection {
     width: 80vw;
-    margin:auto;
- 
+    margin: auto;
+
 
 }
-.secondSection h1{
+
+.secondSection h1 {
     font-size: 1.8rem;
 }
+ img:hover {
+    transform: scale(1.02);
+    transition: 1s;
+    background-color: rgb(158, 255, 255);
+ }
+.text_grey {
+    color: grey;
+}
 
-.text_grey{
-    color:grey;
+.button {
+    margin-top: 30px;
+    list-style: none;
+    cursor: pointer;
+}
+
+.btn {
+    background-color: rgba(207, 207, 207, 0.596);
+    color: rgb(0, 0, 0);
+    border: 1px solid black;
+    padding: 10px 15px;
+    border-radius: 30px;
+    text-decoration: none;
+    display: inline-block;
+    transition: 0.3s;
+
+}
+
+.button a{
+    text-decoration: none;
+    color: black;
+    
+}
+
+.btn a:hover {
+
+    color: rgb(0, 0, 0);
+
+}
+.button :hover{
+    background-color: rgb(155, 204, 204);
+    transition: 0.3s;
 }
