--- a/global.css
+++ b/global.css
@@ -1,9 +1,10 @@
 * {
     padding: 0;
-    margin: 0;
+    margin: 2px;
 }
 
 body {
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
 }
+
