--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-
 nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 100px;
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(20, 19, 19);
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.9);
 }
 
 nav ul {
@@ -20,17 +20,23 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: rgb(0, 0, 0);
-}
-nav ul li a:hover {
-    color: rgb(26, 125, 126);
-    /* font-weight: bold;
-    font-size: 1.5rem; */
+    color: rgb(255, 255, 255);
 }
 
-main hr{
+nav ul li a:hover {
+    color: cyan;
+
+
+}
+
+main hr {
     height: 1px;
     border: 0;
     background-color: rgb(143, 158, 158);
     margin: 40px 40px;
+}
+
+nav a {
+    text-decoration: none;
+
 }
