--- a/home/global.css
+++ b/home/global.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.783);
     color: rgb(0, 0, 0);
 }
 
