--- a/home/nav.css
+++ b/home/nav.css
@@ -31,10 +31,36 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: cyan;
+    color: rgb(138, 43, 226);
+    transition: all 0.6s ease-in-out;   
 
 }
 nav a {
     text-decoration: none;
 
+}
+.right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 100px; 
+}
+.right a{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    margin-left: 20px;
+}
+
+.login-btn{
+    background-color: rgb(138, 43, 226);
+    border: solid 1px black;
+    border-radius: 10px;
+    padding: 10px 20px;
+}
+
+.right .login-btn:hover{
+    background-color: rgb(121, 13, 222);
+   
+    transition: all 0.3s ease-in-out;
 }
