--- a/contact/mainbody.css
+++ b/contact/mainbody.css
@@ -1,8 +1,3 @@
-.firstSection {
-    display: flex;
-    justify-self: center;
-    margin-top: 150px;
-}
 
 .container {
     height: 50vh;
@@ -18,6 +13,21 @@ textarea {
     width: 90%;
     padding: 10px;
     margin: 8px 0;
-    border: 1px solid #ccc;
+    border: 1px solid #000000;
     border-radius: 5px;
+    background-color: rgba(240, 237, 233, 0.681);
+}
+#submit{
+    background-color: #349bba;
+    color: rgb(0, 0, 0);
+    border: 1px solid #000000;
+    border-radius: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: bold;
+    align-items: center;
+    flex: auto;
+ 
+    margin-left: 40%;
 }
