--- a/home/global.css
+++ b/home/global.css
@@ -4,7 +4,8 @@
 }
 
 body {
-    background-color: rgba(255, 255, 255, 0.783);
-    color: rgb(0, 0, 0);
-}
+    background-color: rgb(254, 254, 254);
+    color: black;
+ 
 
+}
