--- a/home/nav.css
+++ b/home/nav.css
@@ -1,6 +1,6 @@
 nav {
     display: flex;
-    justify-content: space-around;
+    justify-content:space-between;
     align-items: center;
     height: 100px;
     background-color: rgb(20, 19, 19);
@@ -12,6 +12,7 @@ nav {
     font-size: 1.5rem;
     font-weight: bold;
     margin-right: 100px;
+    margin-left:50px;
     color: white;
 }
 nav ul {
