--- a/my_space/nav.css
+++ b/my_space/nav.css
@@ -1,16 +1,18 @@
 nav {
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
     align-items: center;
     height: 100px;
     background-color: rgb(20, 19, 19);
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.9);
 }
+
+
 .left {
     font-size: 1.5rem;
     font-weight: bold;
     margin-right: 100px;
-    margin-left: 50px;
+    margin-left:50px;
     color: white;
 }
 nav ul {
@@ -30,7 +32,8 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: cyan;
+    color: rgb(138, 43, 226);
+    transition: all 0.6s ease-in-out;   
 
 }
 nav a {
@@ -55,6 +58,7 @@ nav a {
     border: solid 1px black;
     border-radius: 10px;
     padding: 10px 20px;
+    
 }
 
 .right .login-btn:hover{
