--- a/project/projectnav.css
+++ b/project/projectnav.css
@@ -1,6 +1,6 @@
 nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     height: 100px;
     background-color: rgb(20, 19, 19);
@@ -12,6 +12,7 @@ nav {
     font-size: 1.5rem;
     font-weight: bold;
     margin-right: 100px;
+    margin-left: 50px;
     color: white;
 }
 nav ul {
@@ -37,4 +38,29 @@ nav ul li a:hover {
 nav a {
     text-decoration: none;
 
+}
+.right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 100px; 
+}
+.right a{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    margin-left: 20px;
+}
+
+.login-btn{
+    background-color: rgb(138, 43, 226);
+    border: solid 1px black;
+    border-radius: 10px;
+    padding: 10px 20px;
+}
+
+.right .login-btn:hover{
+    background-color: rgb(121, 13, 222);
+   
+    transition: all 0.3s ease-in-out;
 }
