--- a/my_space/firstsection.css
+++ b/my_space/firstsection.css
@@ -15,19 +15,22 @@
     margin: 10px;
 
 }
-.quotes{
-    background-color: #ecf09d;
+
+.quotes {
+
     height: 300px;
     width: 200px;
     border-radius: 5px;
     margin: 10px;
 }
-.notes{
+
+.notes {
     background-color: #f0c09d;
     height: 300px;
     width: 200px;
     border-radius: 5px;
     margin: 10px;
+
 }
 
 .poem a {
@@ -43,7 +46,7 @@
 
 .quotes a {
     text-decoration: none;
-    color: black;
+    color: rgb(248, 248, 248);
     align-items: center;
     display: flex;
     justify-content: center;
@@ -51,6 +54,7 @@
     width: 100%;
     font-size: 25px;
 }
+
 .notes a {
     text-decoration: none;
     color: black;
@@ -61,14 +65,17 @@
     width: 100%;
     font-size: 25px;
 }
+
 .poem:hover {
     background-color: #9bed82;
     transition: background-color 0.3s ease;
 }
+
 .quotes:hover {
     background-color: #e8ee77;
     transition: background-color 0.3s ease;
 }
+
 .notes:hover {
     background-color: #f0a09d;
     transition: background-color 0.3s ease;
